crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_acceleration__multi_executor_agg.snap
---
source: crates/runtime/tests/cluster/distributed_acceleration.rs
expression: agg_fmt
---
+------------+-----------+---------+---------+
| total_rows | avg_score | min_age | max_age |
+------------+-----------+---------+---------+
| 10         | 85.2      | 26      | 52      |
+------------+-----------+---------+---------+
