crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_acceleration__order_by_limit_pushdown_plan.snap
---
source: crates/runtime/tests/cluster/distributed_acceleration.rs
expression: plan_fmt
---
+---------------+-------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: test_data.score DESC NULLS FIRST, fetch=3                                                       |
|               |   SubqueryAlias: test_data                                                                            |
|               |     Union                                                                                             |
|               |       Sort: test_data.score DESC NULLS FIRST, fetch=3                                                 |
|               |         SubqueryAlias: test_data                                                                      |
|               |           TableScan: test_data projection=[id, name, score]                                           |
|               |       Sort: test_data.score DESC NULLS FIRST, fetch=3                                                 |
|               |         SubqueryAlias: test_data                                                                      |
|               |           TableScan: test_data projection=[id, name, score]                                           |
| physical_plan | SortPreservingMergeExec: [score@2 DESC], fetch=3                                                      |
|               |   UnionExec                                                                                           |
|               |     BytesProcessedExec                                                                                |
|               |       FlightSqlExec sql=SELECT id, name, score FROM test_data ORDER BY score DESC NULLS FIRST LIMIT 3 |
|               |     BytesProcessedExec                                                                                |
|               |       FlightSqlExec sql=SELECT id, name, score FROM test_data ORDER BY score DESC NULLS FIRST LIMIT 3 |
|               |                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------+
