crates/runtime/tests/cluster/snapshots/integration__cluster__distributed_acceleration__order_by_limit_with_predicate_rows.snap
---
source: crates/runtime/tests/cluster/distributed_acceleration.rs
expression: pred_rows_fmt
---
+----+--------------+-------+
| id | name         | score |
+----+--------------+-------+
| 1  | John Doe     | 85    |
| 2  | Jane Smith   | 92    |
| 4  | Emily Brown  | 89    |
| 6  | Sarah Wilson | 94    |
| 7  | Tom Anderson | 81    |
+----+--------------+-------+
